--- a/src/components/BreakingNewsCard.css
+++ b/src/components/BreakingNewsCard.css
@@ -1,12 +1,15 @@
 .breaking-card {
   display: flex;
   max-width: 800px;
-  margin: 30px auto;
+  margin: 30px NONE;
   background-color: white;
   border: 1px solid #ddd;
   border-left: 6px solid crimson;
   border-radius: 12px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 
+  0 0 20px rgba(0, 0, 0, 0.25),  /* full spread */
+  0 10px 10px rgba(0, 0, 0, 0.2); /* extra depth below */
+
   overflow: hidden;
 }
 
@@ -130,24 +133,38 @@
 @media (max-width: 600px) {
   .breaking-card {
     flex-direction: column;
-    align-items: center;
     text-align: center;
+    border: none;
+    margin: 28px;
+    padding: 14px;
+    max-width: 92vw;
+    background: #fdfdfd;
+   box-shadow: 
+  0 0 20px rgba(0, 0, 0, 0.25),  /* full spread */
+  0 10px 10px rgba(0, 0, 0, 0.2); /* extra depth below */
+
   }
 
   .breaking-image {
-    width: 90%;
-    height: auto;
-    max-height: 180px;
-    margin-bottom: -20px;
+    
+     width: 225px;       /* 100px more than height */
+  height: 120px;
+  object-fit: cover;  /* ensures cropping instead of distortion */
+  border-radius: 8px;
+    
+   
+  }
+  .breaking-content{
+    padding: 0px;
   }
 
   .breaking-body {
-    width: 100%;
     align-items: center;
+    width: 100%;
   }
 
   .breaking-title a {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 
   .breaking-footer {
@@ -155,3 +172,4 @@
     gap: 5px;
   }
 }
+
